- Fixed bug #46388 (stream_notification_callback inside of object destroys object variables)